[package]
name = "line-chat"
version = "0.1.0"
authors = ["py-162157 <765007043@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
futures = "0.3.13"
bytes = "1.0.1"
tracing-subscriber = "0.2.16"
tokio-stream = "0.1.3"
tokio-util = { version = "0.6.3", features = ["full"] }
tracing = "0.1.25"