[package]
name = "mytcpserver"
version = "0.1.0"
authors = ["py-162157 <765007043@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
hyper = "0.13"
anyhow = "1.0.31"
reqwest = { vwesion = "0.10.4", features = ["blocking"] }
futures = "0.3"